Renamed Ch3 project, added check for pickles directory

--- a/hands-on/Chapter 3 - Handwritten Digits Classification.ipynb
+++ b/hands-on/Chapter 3 - Handwritten Digits Classification.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Handwriting Classification\n",
+    "# Handwritten Digits Classification\n",
     "This project explores classification learning using the MNIST dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:50:04.324245Z",
@@ -19,6 +19,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T05:17:47.779351Z",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:21:47.205407Z",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:21:47.214387Z",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T04:25:15.576199Z",
@@ -112,7 +113,7 @@
        "(70000, 784)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T04:48:20.392532Z",
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T05:18:22.898304Z",
@@ -189,7 +190,7 @@
        "5"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:16:08.624623Z",
@@ -223,7 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create pickles directory\n",
+    "os.makedirs(os.path.join(os.path.abspath('.'), 'pickles'), exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:22:10.357231Z",
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:22:12.997354Z",
@@ -261,7 +272,7 @@
        "array([ True])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:22:13.644714Z",
@@ -300,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:22:14.102117Z",
@@ -314,7 +325,7 @@
        "array([False])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:28:43.793360Z",
@@ -358,7 +369,7 @@
        "array([0.9644 , 0.96595, 0.952  ])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:37:08.653962Z",
@@ -400,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T06:41:21.706890Z",
@@ -414,7 +425,7 @@
        "array([0.91125, 0.90855, 0.90915])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:04:01.211569Z",
@@ -501,7 +512,7 @@
        "5          0  0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:29:38.551227Z",
@@ -536,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:29:42.062374Z",
@@ -551,7 +562,7 @@
        "       [ 1626,  3795]], dtype=int64)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-11T07:08:48.113079Z",
@@ -586,7 +597,7 @@
        "       [    0,  5421]], dtype=int64)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,6 +607,13 @@
     "y_train_perfect_predictions = y_train_5\n",
     "confusion_matrix(y_train_5, y_train_perfect_predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -614,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
