Added detail notes for kernelized SVMs and an example cost function for an online SVM

--- a/hands-on/Chapter 5 - Support Vector Machines.ipynb
+++ b/hands-on/Chapter 5 - Support Vector Machines.ipynb
@@ -1056,6 +1056,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A quadratic programming solver can be used to determine vector $\\hat{\\boldsymbol{\\alpha}}$ that minimizes this equation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Equation 7: From the dual solution to the primal solution*\n",
     "\n",
     "\\begin{align}\n",
@@ -1079,7 +1086,8 @@
    "metadata": {},
    "source": [
     "## Kernelized SVMs\n",
-    "\n"
+    "\n",
+    "Consider a second-degree polynomial transformation applied to a two-dimensional training set."
    ]
   },
   {
@@ -1100,6 +1108,13 @@
     "    x^2_2\\\\\n",
     "    \\end{pmatrix}\n",
     "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now consider calculating the dot product of two transformed two-dimensional vectors $\\mathbf{a}$ and $\\mathbf{b}$."
    ]
   },
   {
@@ -1140,6 +1155,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The dot product of the transformed vectors is equal to the squared dot product of the original vectors. This trick eliminates the need to transform each vector, significantly improving computational efficiency.\n",
+    "\n",
+    "A kernel is a function capable of computing the dot product of two transformed vectors without actually transforming them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Equation 10: Common kernels*\n",
     "\n",
     "\\begin{array}{@{}rl}\n",
@@ -1148,6 +1172,42 @@
     "\\text{Gaussian RBF:} & K(\\mathbf{a}, \\mathbf{b}) = \\text{exp}\\bigl( -\\gamma ||\\mathbf{a-b}||^2 \\bigr)\\\\\n",
     "\\text{Sigmoid:} & K(\\mathbf{a}, \\mathbf{b}) = \\text{tanh}(\\gamma\\mathbf{a^\\mathsf{T}b}+r)\n",
     "\\end{array}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Mercer's theorem* states that if a function $K(\\mathbf{a}, \\mathbf{b})$ satisfies *Mercer's condition*, then there exists a function $\\phi$ that maps $\\mathbf{a}$ and $\\mathbf{b}$ into another space such that $K(\\mathbf{a}, \\mathbf{b}) = \\phi(\\mathbf{a})^\\mathsf{T} \\phi(\\mathbf{b})$.\n",
+    "\n",
+    "*Mercer's condition:*\n",
+    "\n",
+    "There exists a mapping $\\phi$ and an expansion\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "K(\\mathbf{x}, \\mathbf{y}) = \\sum_i \\phi(\\mathbf{x})_i \\phi(\\mathbf{y})_i\n",
+    "\\end{equation*}\n",
+    "\n",
+    "if and only if, for any $g(\\mathbf{x})$ such that\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\int g(\\mathbf{x})^2 d\\mathbf{x} \\text{ is finite }\n",
+    "\\end{equation*}\n",
+    "\n",
+    "then\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\int K(\\mathbf{x}, \\mathbf{y}) g(\\mathbf{x}) g(\\mathbf{y}) d\\mathbf{x} d\\mathbf{y} \\geq 0\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applying the kernel trick to the determination of the primal solution from the dual solution will involve equations that include $\\phi(x^{(i)})$, which can result in a $\\hat{\\mathbf{w}}$ that's impossible to compute. \n",
+    "\n",
+    "This can be avoided by expanding $\\hat{\\mathbf{w}}$ according to *Equation 7* in the decision function and deriving a form that accommodates the kernel trick."
    ]
   },
   {
@@ -1181,6 +1241,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A kernel trick form of $\\hat{b}$ can be derived using the same method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Equation 12: Using the kernel trick to compute the bias term*\n",
     "\n",
     "\\begin{align}\n",
@@ -1208,11 +1275,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Online SVMs\n",
+    "\n",
+    "An online linear SVM classifier can be implemented using Gradient Descent to minimize the cost function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Equation 13: Linear SVM classifier cost function*\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "J(\\mathbf{w},b) = \\frac{1}{2} \\mathbf{w^\\mathsf{T}w} + C \\sum_{i=1}^m max\\bigl(\n",
+    "    0, 1 - t^{(i)} \\bigl(\n",
+    "        \\mathbf{w^\\mathsf{T}x}^{(i)}+b\n",
+    "    \\bigr)\n",
+    "\\bigr)\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $max(0, 1-t)$ is the hinge loss function, asserting that an instance's margin violation is 0 if it is located outside the margin on the correct side of the boundary and proportional to the distance to the correct boundary if not."
+   ]
   }
  ],
  "metadata": {
