Added notes on random forests

--- a/hands-on/Chapter 7 - Ensemble Learning.ipynb
+++ b/hands-on/Chapter 7 - Ensemble Learning.ipynb
@@ -6,8 +6,6 @@
    "source": [
     "*Ensemble Learning* involves training a group of predictors (an *ensemble*) and aggregating their predictions to achieve better accuracy than any of the individual models.\n",
     "\n",
-    "A *Random Forest* is an ensemble method that trains a group of decision trees on different random subsets of the training data. Predictions are made by each tree and the class with the most 'votes' is predicted.\n",
-    "\n",
     "Ensemble methods are typically applied near the end of a project after some effective predictors have been identified.\n",
     "\n",
     "Topics:\n",
@@ -48,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +82,7 @@
        "                 weights=None)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: 0.864\n",
+      "LogisticRegression: 0.816\n",
       "RandomForestClassifier: 0.896\n",
-      "SVC: 0.896\n",
+      "SVC: 0.904\n",
       "VotingClassifier: 0.896\n"
      ]
     }
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +171,7 @@
        "                 weights=None)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: 0.864\n",
-      "RandomForestClassifier: 0.888\n",
-      "SVC: 0.896\n",
+      "LogisticRegression: 0.816\n",
+      "RandomForestClassifier: 0.896\n",
+      "SVC: 0.904\n",
       "VotingClassifier: 0.904\n"
      ]
     }
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +248,7 @@
        "                  random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BaggingClassifier: 0.856\n"
+      "BaggingClassifier: 0.904\n"
      ]
     }
    ],
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +313,7 @@
        "                  random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PastingClassifier: 0.912\n"
+      "PastingClassifier: 0.904\n"
      ]
     }
    ],
@@ -359,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.928"
+       "0.9173333333333333"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,16 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.912"
+       "0.904"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,20 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.375     , 0.625     ],\n",
-       "       [0.38802083, 0.61197917],\n",
-       "       [0.9972752 , 0.0027248 ],\n",
-       "       [0.01023018, 0.98976982],\n",
-       "       [0.03266332, 0.96733668]])"
+       "array([[0.79842932, 0.20157068],\n",
+       "       [0.89159892, 0.10840108],\n",
+       "       [0.97738693, 0.02261307],\n",
+       "       [0.84776903, 0.15223097],\n",
+       "       [0.00520833, 0.99479167]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.848"
+       "0.872"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.84"
+       "0.832"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,16 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.648"
+       "0.704"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,6 +528,185 @@
    "metadata": {},
    "source": [
     "Random patches and subspaces are mostly useful when handling high-dimensional inputs such as images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forests\n",
+    "\n",
+    "A *Random Forest* is an ensemble of decision trees typically trained via bagging with max samples hyperparameter set to the size of the training set.\n",
+    "\n",
+    "The RandomForestClassifier is an optimized alternative to creating a BaggingClassifier with DecisionTreeClassifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+       "                       criterion='gini', max_depth=None, max_features='auto',\n",
+       "                       max_leaf_nodes=16, max_samples=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+       "                       n_jobs=-1, oob_score=False, random_state=None, verbose=0,\n",
+       "                       warm_start=False)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=500, max_leaf_nodes=16, n_jobs=-1)\n",
+    "rnd_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.896"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_rf = rnd_clf.predict(X_test)\n",
+    "accuracy_score(y_test, y_pred_rf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forests can be made even more random by using random feature thresholds when growing trees instead of searching for the best possible thresholds. These trees are called *Extremely Randomized Trees*, or *Extra-Trees*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ExtraTreesClassifier(bootstrap=False, ccp_alpha=0.0, class_weight=None,\n",
+       "                     criterion='gini', max_depth=None, max_features='auto',\n",
+       "                     max_leaf_nodes=16, max_samples=None,\n",
+       "                     min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                     min_samples_leaf=1, min_samples_split=2,\n",
+       "                     min_weight_fraction_leaf=0.0, n_estimators=500, n_jobs=-1,\n",
+       "                     oob_score=False, random_state=None, verbose=0,\n",
+       "                     warm_start=False)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "\n",
+    "et_clf = ExtraTreesClassifier(n_estimators=500, max_leaf_nodes=16, n_jobs=-1)\n",
+    "et_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.864"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_et = et_clf.predict(X_test)\n",
+    "accuracy_score(y_test, y_pred_et)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forests are useful for measuring feature importance by observing how nodes using each feature reduce impurity across all trees in the forest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+       "                       criterion='gini', max_depth=None, max_features='auto',\n",
+       "                       max_leaf_nodes=None, max_samples=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+       "                       n_jobs=-1, oob_score=False, random_state=None, verbose=0,\n",
+       "                       warm_start=False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "iris = load_iris()\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=500, n_jobs=-1)\n",
+    "rnd_clf.fit(iris['data'], iris['target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length (cm): 0.09936617140725601\n",
+      "sepal width (cm): 0.023920764344037643\n",
+      "petal length (cm): 0.43623714209033443\n",
+      "petal width (cm): 0.4404759221583719\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, score in zip(iris['feature_names'], rnd_clf.feature_importances_):\n",
+    "    print(f'{name}: {score}')"
    ]
   },
   {
