--- a/hands-on/Chapter 7 - Ensemble Learning.ipynb
+++ b/hands-on/Chapter 7 - Ensemble Learning.ipynb
@@ -113,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: 0.816\n",
-      "RandomForestClassifier: 0.896\n",
+      "LogisticRegression: 0.864\n",
+      "RandomForestClassifier: 0.92\n",
       "SVC: 0.904\n",
       "VotingClassifier: 0.896\n"
      ]
@@ -194,10 +194,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: 0.816\n",
-      "RandomForestClassifier: 0.896\n",
+      "LogisticRegression: 0.864\n",
+      "RandomForestClassifier: 0.912\n",
       "SVC: 0.904\n",
-      "VotingClassifier: 0.904\n"
+      "VotingClassifier: 0.912\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BaggingClassifier: 0.904\n"
+      "BaggingClassifier: 0.92\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PastingClassifier: 0.904\n"
+      "PastingClassifier: 0.92\n"
      ]
     }
    ],
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9173333333333333"
+       "0.912"
       ]
      },
      "execution_count": 10,
@@ -392,7 +392,7 @@
     {
      "data": {
       "text/plain": [
-       "0.904"
+       "0.92"
       ]
      },
      "execution_count": 11,
@@ -413,11 +413,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.79842932, 0.20157068],\n",
-       "       [0.89159892, 0.10840108],\n",
-       "       [0.97738693, 0.02261307],\n",
-       "       [0.84776903, 0.15223097],\n",
-       "       [0.00520833, 0.99479167]])"
+       "array([[0.90625   , 0.09375   ],\n",
+       "       [0.67639257, 0.32360743],\n",
+       "       [0.00516796, 0.99483204],\n",
+       "       [0.0984456 , 0.9015544 ],\n",
+       "       [0.952     , 0.048     ]])"
       ]
      },
      "execution_count": 12,
@@ -448,7 +448,7 @@
     {
      "data": {
       "text/plain": [
-       "0.872"
+       "0.8693333333333333"
       ]
      },
      "execution_count": 13,
@@ -500,7 +500,7 @@
     {
      "data": {
       "text/plain": [
-       "0.704"
+       "0.664"
       ]
      },
      "execution_count": 15,
@@ -573,16 +573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.896"
+       "0.912"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "                     warm_start=False)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,16 +631,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.864"
+       "0.904"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,17 +690,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sepal length (cm): 0.09936617140725601\n",
-      "sepal width (cm): 0.023920764344037643\n",
-      "petal length (cm): 0.43623714209033443\n",
-      "petal width (cm): 0.4404759221583719\n"
+      "sepal length (cm): 0.09217234903002987\n",
+      "sepal width (cm): 0.025003091206376275\n",
+      "petal length (cm): 0.4473647116683714\n",
+      "petal width (cm): 0.43545984809522237\n"
      ]
     }
    ],
@@ -710,10 +710,237 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Boosting\n",
+    "\n",
+    "*Boosting* refers to the method of combining several weak learners into a strong learner, usually trained sequentially. *AdaBoost* (or *Adaptive Boosting*) and *Gradient Boosting* are two very common methods.\n",
+    "\n",
+    "Since training is done sequentially, this method can't be parallelized and therefore doesn't scale as well as bagging or pasting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AdaBoost\n",
+    "\n",
+    "The *AdaBoost* method start by training a base classifier, increases the weights for misclassified instances, and trains another classifier with the updated weights. This process is repeated for all predictors in the ensemble, and predictions are made via aggregation as with bagging or pasting with weights assigned according to the accuracy of the predictor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1: Determine the error rate of a predictor\n",
+    "\n",
+    "*Equation 1: Weighted error rate of the $j^{th}$ predictor*\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "r_j = \\frac{\n",
+    "    \\sum_{\\substack{\n",
+    "        \\hat{y}_j^{(i)}\n",
+    "        \\neq\n",
+    "        y^{(i)}\n",
+    "    \\\\i=1}}^m w^{(i)}\n",
+    "}{\n",
+    "    \\sum_{i=1}^m w^{(i)}\n",
+    "}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "- $\\hat{y}_j^{(i)}$ is the $j^{th}$ predictor's prediction for the $i^{th}$ instance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 2: Determine the predictor's weight\n",
+    "\n",
+    "*Equation 2: Predictor weight*\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\alpha_j = \\eta \\text{log} \\frac{1-r_j}{r_j}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "- $\\eta$ is the learning rate\n",
+    "- $\\alpha_j \\gt 0$ when the predictor is $\\gt 50$% accurate\n",
+    "- $\\alpha_j \\lt 0$ when the predictor is $\\lt 50$% accurate\n",
+    "- $\\alpha_j \\approx 0$ when the predictor is $\\approx 50$% accurate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 3: Boost misclassified instance weights\n",
+    "\n",
+    "*Equation 3: Weight update rule*\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\text{for } i=1, 2, \\cdots, m\\\\\n",
+    "w^{(i)} \\leftarrow\n",
+    "    \\begin{cases}\n",
+    "    & w^{(i)} & \\text{ if } \\hat{y}_j^{(i)} = y^{(i)} \\\\\n",
+    "    & w^{(i)} \\text{exp}\\bigl(\\alpha_j\\bigr) & \\text{ if } \\hat{y}_j^{(i)} \\neq y^{(i)} \\\\\n",
+    "    \\end{cases}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "- The weights are then normalized by dividing by $\\sum_{i=1}^m w^{(i)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Steps 1-3 are repeated until all predictors have been trained or a perfect predictor is established."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Equation 4: AdaBoost predictions*\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\hat{y}(\\mathbf{x}) = \\underset{k}{\\text{argmax}} \\sum_{\\substack{\\hat{y}_j(\\mathbf{x})=k\\\\j=1}}^N \\alpha_j\n",
+    "\\end{equation*}\n",
+    "\n",
+    "- $N$ is the number of predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostClassifier(algorithm='SAMME.R',\n",
+       "                   base_estimator=DecisionTreeClassifier(ccp_alpha=0.0,\n",
+       "                                                         class_weight=None,\n",
+       "                                                         criterion='gini',\n",
+       "                                                         max_depth=1,\n",
+       "                                                         max_features=None,\n",
+       "                                                         max_leaf_nodes=None,\n",
+       "                                                         min_impurity_decrease=0.0,\n",
+       "                                                         min_impurity_split=None,\n",
+       "                                                         min_samples_leaf=1,\n",
+       "                                                         min_samples_split=2,\n",
+       "                                                         min_weight_fraction_leaf=0.0,\n",
+       "                                                         presort='deprecated',\n",
+       "                                                         random_state=None,\n",
+       "                                                         splitter='best'),\n",
+       "                   learning_rate=0.5, n_estimators=200, random_state=None)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "# Use 200 decision stumps and the SAMME.R algorithm\n",
+    "ada_clf = AdaBoostClassifier(\n",
+    "    DecisionTreeClassifier(max_depth=1),\n",
+    "    n_estimators=200,\n",
+    "    algorithm='SAMME.R',\n",
+    "    learning_rate=0.5\n",
+    ")\n",
+    "ada_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.896"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, ada_clf.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostRegressor(base_estimator=DecisionTreeRegressor(ccp_alpha=0.0,\n",
+       "                                                       criterion='mse',\n",
+       "                                                       max_depth=1,\n",
+       "                                                       max_features=None,\n",
+       "                                                       max_leaf_nodes=None,\n",
+       "                                                       min_impurity_decrease=0.0,\n",
+       "                                                       min_impurity_split=None,\n",
+       "                                                       min_samples_leaf=1,\n",
+       "                                                       min_samples_split=2,\n",
+       "                                                       min_weight_fraction_leaf=0.0,\n",
+       "                                                       presort='deprecated',\n",
+       "                                                       random_state=None,\n",
+       "                                                       splitter='best'),\n",
+       "                  learning_rate=0.5, loss='linear', n_estimators=200,\n",
+       "                  random_state=None)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A regression variant also exists\n",
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "ada_reg = AdaBoostRegressor(\n",
+    "    DecisionTreeRegressor(max_depth=1),\n",
+    "    n_estimators=200,\n",
+    "    learning_rate=0.5\n",
+    ")\n",
+    "ada_reg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15063502818008653"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mean_squared_error(y_test, ada_reg.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
