Added notes on kmeans initialization algorithms

--- a/hands-on/Chapter 9 - Unsupervised Learning.ipynb
+++ b/hands-on/Chapter 9 - Unsupervised Learning.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,20 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.21494229,  2.32682611],\n",
-       "       [-2.80220997,  2.78658057],\n",
-       "       [-2.79611971,  1.29657896],\n",
+       "array([[-2.79524351,  1.79985624],\n",
+       "       [ 0.21494229,  2.32682611],\n",
        "       [-1.4684875 ,  2.31655447],\n",
-       "       [-2.79524351,  1.79985624]])"
+       "       [-2.80220997,  2.78658057],\n",
+       "       [-2.79611971,  1.29657896]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 1])"
+       "array([1, 1, 3, 3])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,19 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.39117195, 2.91051365, 2.88324238, 1.50221911, 2.80239965],\n",
-       "       [2.80416864, 5.85528389, 5.83864752, 4.47968606, 5.79869855],\n",
-       "       [3.28466391, 0.29097895, 1.71557874, 1.67708925, 1.21748522],\n",
-       "       [3.21960295, 0.34820873, 1.22056929, 1.54245999, 0.72947002]])"
+       "array([[2.80239965, 0.39117195, 1.50221911, 2.91051365, 2.88324238],\n",
+       "       [5.79869855, 2.80416864, 4.47968606, 5.85528389, 5.83864752],\n",
+       "       [1.21748522, 3.28466391, 1.67708925, 0.29097895, 1.71557874],\n",
+       "       [0.72947002, 3.21960295, 1.54245999, 0.34820873, 1.22056929]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,6 +223,164 @@
    "source": [
     "# Transform measures the distance from each instance to the center of each cluster\n",
     "kmeans.transform(X_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The K-means algorithm works by selecting instances at random to be used as centroids for each cluster, labeling the instances relative to the centroids, updating the chosen centroids, and repeating until the centroids converge to ideal locations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Depending on the initial centroids, the algorithm may converge to a local optimum. This can be avoided if the cluster locations can be approximated during initial exploration, and the centroids initialized in the appropriate areas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans(algorithm='auto', copy_x=True,\n",
+       "       init=array([[-3,  3],\n",
+       "       [-3,  2],\n",
+       "       [-3,  1],\n",
+       "       [-1,  2],\n",
+       "       [ 0,  2]]),\n",
+       "       max_iter=300, n_clusters=5, n_init=1, n_jobs=None,\n",
+       "       precompute_distances='auto', random_state=None, tol=0.0001, verbose=0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "init = np.array([[-3, 3], [-3, 2], [-3, 1], [-1, 2], [0, 2]])\n",
+    "kmeans_a = KMeans(n_clusters=5, init=init, n_init=1)\n",
+    "kmeans_a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another method is to increase the number of initializations (n_init) to try a number of different random initializations and keep the best solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans(algorithm='auto', copy_x=True, init='k-means++', max_iter=300,\n",
+       "       n_clusters=5, n_init=10, n_jobs=None, precompute_distances='auto',\n",
+       "       random_state=None, tol=0.0001, verbose=0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmeans_b = KMeans(n_clusters=5, n_init=10)\n",
+    "kmeans_b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The performance of a K-means algorithm can be measured by its *inertia*, or the mean squared distance between each instance and the nearest centroid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "218.83999258014802"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmeans_a.fit(X)\n",
+    "kmeans_a.inertia_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "218.83999258014802"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmeans_b.fit(X)\n",
+    "kmeans_b.inertia_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-218.83999258014836"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The score is negative inertia so optimization will search for the highest value\n",
+    "kmeans_a.score(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The K-means++ initialization algorithm involves a step to encourage separation between the random centroids.\n",
+    "\n",
+    "*K-means++ algorithm*:\n",
+    "\n",
+    "1. A centroid $\\mathbf{c}^{(1)}$ is chosen uniformly at random.\n",
+    "\n",
+    "2. A second centroid $\\mathbf{c}^{(i)}$ is chosen as $\\mathbf{x}^{(i)}$ with probability $D\\bigl( \\mathbf{x}^{(i)} \\bigr)^2 / \\sum_{j=1}^m D\\bigl( \\mathbf{x}^{(i)} \\bigr)^2$, where $D(\\mathbf{{x}^{(i)}})$ is the distance between $\\mathbf{x}^{(i)}$ and the nearest known centroid.\n",
+    "\n",
+    "3. Repeat until $k$ centroids have been chosen."
    ]
   },
   {
