--- a/hands-on/Chapter 9 - Unsupervised Learning.ipynb
+++ b/hands-on/Chapter 9 - Unsupervised Learning.ipynb
@@ -162,9 +162,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[-2.79524351,  1.79985624],\n",
+       "array([[-1.4684875 ,  2.31655447],\n",
+       "       [-2.79524351,  1.79985624],\n",
        "       [ 0.21494229,  2.32682611],\n",
-       "       [-1.4684875 ,  2.31655447],\n",
        "       [-2.80220997,  2.78658057],\n",
        "       [-2.79611971,  1.29657896]])"
       ]
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 3, 3])"
+       "array([2, 2, 3, 3])"
       ]
      },
      "execution_count": 7,
@@ -209,10 +209,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[2.80239965, 0.39117195, 1.50221911, 2.91051365, 2.88324238],\n",
-       "       [5.79869855, 2.80416864, 4.47968606, 5.85528389, 5.83864752],\n",
-       "       [1.21748522, 3.28466391, 1.67708925, 0.29097895, 1.71557874],\n",
-       "       [0.72947002, 3.21960295, 1.54245999, 0.34820873, 1.22056929]])"
+       "array([[1.50221911, 2.80239965, 0.39117195, 2.91051365, 2.88324238],\n",
+       "       [4.47968606, 5.79869855, 2.80416864, 5.85528389, 5.83864752],\n",
+       "       [1.67708925, 1.21748522, 3.28466391, 0.29097895, 1.71557874],\n",
+       "       [1.54245999, 0.72947002, 3.21960295, 0.34820873, 1.22056929]])"
       ]
      },
      "execution_count": 8,
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "       precompute_distances='auto', random_state=None, tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "       random_state=None, tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "218.83999258014802"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "218.83999258014802"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "-218.83999258014836"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,6 +381,99 @@
     "2. A second centroid $\\mathbf{c}^{(i)}$ is chosen as $\\mathbf{x}^{(i)}$ with probability $D\\bigl( \\mathbf{x}^{(i)} \\bigr)^2 / \\sum_{j=1}^m D\\bigl( \\mathbf{x}^{(i)} \\bigr)^2$, where $D(\\mathbf{{x}^{(i)}})$ is the distance between $\\mathbf{x}^{(i)}$ and the nearest known centroid.\n",
     "\n",
     "3. Repeat until $k$ centroids have been chosen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another form of the K-means algorithm is the mini-batch method, which uses a subset of the data to iteratively train the predictor. This is much faster at the cost of higher inertia, and can be used for online training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MiniBatchKMeans(batch_size=100, compute_labels=True, init='k-means++',\n",
+       "                init_size=None, max_iter=100, max_no_improvement=10,\n",
+       "                n_clusters=5, n_init=3, random_state=None,\n",
+       "                reassignment_ratio=0.01, tol=0.0, verbose=0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import MiniBatchKMeans\n",
+    "\n",
+    "mb_kmeans = MiniBatchKMeans(n_clusters=5)\n",
+    "mb_kmeans.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Determining an optimal number of clusters can be handled programmatically by calculating the *silhouette score*, or the mean of the silhouette coefficient over all instances.\n",
+    "\n",
+    "An instance's silhouette coefficient is calculated as $\\frac{b-a}{max(a, b)}$, where $a$ is the mean distance to other instances in the same cluster, and $b$ is the mean distance to the instances in the next nearest cluster. This value varies between -1 and +1.\n",
+    "\n",
+    "- A coefficient near +1 indicates it is well inside its own cluster and far from others.\n",
+    "- A coefficient near 0 indicates it is near a cluster boundary.\n",
+    "- A coefficient near -1 indicates a high likelihood that it's been assigned to the wrong cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6490930572066652"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "silhouette_score(X, kmeans.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 2 score: 0.6009977436176899\n",
+      "k = 3 score: 0.5730356596035047\n",
+      "k = 4 score: 0.6805301055233608\n",
+      "k = 5 score: 0.6490930572066652\n",
+      "k = 6 score: 0.5930588320189178\n",
+      "k = 7 score: 0.5980179713685683\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(2, 8):\n",
+    "    kmeans = KMeans(n_clusters=k)\n",
+    "    y_pred = kmeans.fit_predict(X)\n",
+    "    print(f'k = {k} score: {silhouette_score(X, kmeans.labels_)}')"
    ]
   },
   {
