--- a/hands-on/Chapter 10 - Artificial Neural Networks.ipynb
+++ b/hands-on/Chapter 10 - Artificial Neural Networks.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "           validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,18 +1409,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2.6717658],\n",
-       "       [2.8953352],\n",
-       "       [1.4379147]], dtype=float32)"
+       "array([[8.651577],\n",
+       "       [4.9775  ],\n",
+       "       [7.072366]], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,6 +1830,213 @@
     "# Use the TensorBoard callback to create the artifacts\n",
     "tensorboard_cb = keras.callbacks.TensorBoard(get_run_logdir())\n",
     "history = model.fit(X_train, y_train, epochs=30, validation_data=(X_valid, y_valid), callbacks=[tensorboard_cb])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuning\n",
+    "\n",
+    "The flexibility of neural networks comes with many hyperparameters, even the most basic architecture has a number of potential adjustments:\n",
+    "\n",
+    "- Number of layers\n",
+    "- Number of neurons in each layer\n",
+    "- Activation functions\n",
+    "- Weight initialization\n",
+    "\n",
+    "Two familiar tuning methods are grid and randomized search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper function to build a basic Sequential model given some hyperparameters\n",
+    "def build_model(n_hidden=1, n_neurons=30, learning_rate=3e-3, input_shape=[8]):\n",
+    "    model = keras.models.Sequential()\n",
+    "    model.add(keras.layers.InputLayer(input_shape=input_shape))\n",
+    "    for layer in range(n_hidden):\n",
+    "        model.add(keras.layers.Dense(n_neurons, activation='relu'))\n",
+    "    model.add(keras.layers.Dense(1))\n",
+    "    optimizer = keras.optimizers.SGD(lr=learning_rate)\n",
+    "    model.compile(loss='mse', optimizer=optimizer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 11610 samples, validate on 3870 samples\n",
+      "Epoch 1/100\n",
+      "11610/11610 [==============================] - 2s 190us/sample - loss: 1.3287 - val_loss: 0.7459\n",
+      "Epoch 2/100\n",
+      "11610/11610 [==============================] - 2s 142us/sample - loss: 0.5644 - val_loss: 0.5784\n",
+      "Epoch 3/100\n",
+      "11610/11610 [==============================] - 2s 142us/sample - loss: 0.4942 - val_loss: 1.3988\n",
+      "Epoch 4/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.4720 - val_loss: 2.0171\n",
+      "Epoch 5/100\n",
+      "11610/11610 [==============================] - 2s 141us/sample - loss: 0.4661 - val_loss: 1.3521\n",
+      "Epoch 6/100\n",
+      "11610/11610 [==============================] - 2s 144us/sample - loss: 0.4388 - val_loss: 2.4404\n",
+      "Epoch 7/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.4315 - val_loss: 0.9491\n",
+      "Epoch 8/100\n",
+      "11610/11610 [==============================] - 2s 142us/sample - loss: 0.4206 - val_loss: 2.7738\n",
+      "Epoch 9/100\n",
+      "11610/11610 [==============================] - 2s 145us/sample - loss: 0.4318 - val_loss: 0.7723\n",
+      "Epoch 10/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.4122 - val_loss: 1.2506\n",
+      "Epoch 11/100\n",
+      "11610/11610 [==============================] - 2s 145us/sample - loss: 0.4107 - val_loss: 2.0098\n",
+      "Epoch 12/100\n",
+      "11610/11610 [==============================] - 2s 147us/sample - loss: 0.4071 - val_loss: 0.4217\n",
+      "Epoch 13/100\n",
+      "11610/11610 [==============================] - 2s 140us/sample - loss: 0.4232 - val_loss: 2.2657\n",
+      "Epoch 14/100\n",
+      "11610/11610 [==============================] - 2s 144us/sample - loss: 0.4060 - val_loss: 0.9081\n",
+      "Epoch 15/100\n",
+      "11610/11610 [==============================] - 2s 146us/sample - loss: 0.3961 - val_loss: 0.4578\n",
+      "Epoch 16/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.3924 - val_loss: 1.6595\n",
+      "Epoch 17/100\n",
+      "11610/11610 [==============================] - 2s 142us/sample - loss: 0.3938 - val_loss: 0.9950\n",
+      "Epoch 18/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.3930 - val_loss: 0.3960\n",
+      "Epoch 19/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.3871 - val_loss: 2.1295\n",
+      "Epoch 20/100\n",
+      "11610/11610 [==============================] - 2s 143us/sample - loss: 0.3894 - val_loss: 1.1662\n",
+      "Epoch 21/100\n",
+      "11610/11610 [==============================] - 2s 145us/sample - loss: 0.3819 - val_loss: 0.6048\n",
+      "Epoch 22/100\n",
+      "11610/11610 [==============================] - 2s 141us/sample - loss: 0.3795 - val_loss: 1.5726\n",
+      "Epoch 23/100\n",
+      "11610/11610 [==============================] - 2s 148us/sample - loss: 0.3787 - val_loss: 1.0929\n",
+      "Epoch 24/100\n",
+      "11610/11610 [==============================] - 2s 145us/sample - loss: 0.3779 - val_loss: 1.6435\n",
+      "Epoch 25/100\n",
+      "11610/11610 [==============================] - 2s 145us/sample - loss: 0.3754 - val_loss: 1.7208\n",
+      "Epoch 26/100\n",
+      "11610/11610 [==============================] - 2s 145us/sample - loss: 0.3750 - val_loss: 0.3963\n",
+      "Epoch 27/100\n",
+      "11610/11610 [==============================] - 2s 150us/sample - loss: 0.3717 - val_loss: 1.4360\n",
+      "Epoch 28/100\n",
+      "11610/11610 [==============================] - 2s 147us/sample - loss: 0.3724 - val_loss: 0.5297\n",
+      "5160/5160 [==============================] - 0s 77us/sample - loss: 0.3846\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Scikit-Learn style regressor by using the KerasRegressor wrapper\n",
+    "keras_reg = keras.wrappers.scikit_learn.KerasRegressor(build_model)\n",
+    "\n",
+    "keras_reg.fit(\n",
+    "    X_train, y_train, epochs=100, \n",
+    "    validation_data=(X_valid, y_valid), \n",
+    "    callbacks=[keras.callbacks.EarlyStopping(patience=10)]\n",
+    ")\n",
+    "mse_test = keras_reg.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = keras_reg.predict(X_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nrnd_search_cv = RandomizedSearchCV(keras_reg, param_distribs, n_iter=10, cv=3)\\nrnd_search_cv.fit(\\n    X_train, y_train, epochs=100, \\n    validation_data=(X_valid, y_valid),\\n    callbacks=[keras.callbacks.EarlyStopping(patience=10)]\\n)\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import reciprocal\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "# Set the hyperparameters to check\n",
+    "param_distribs = {\n",
+    "    'n_hidden': [0, 1, 2, 3],\n",
+    "    'n_neurons': np.arange(1, 100),\n",
+    "    'learning_rate': reciprocal(3e-4, 3e-2)\n",
+    "}\n",
+    "\n",
+    "# Perform the randomized search (warning: will take a very long time! Commented to avoid accidental execution)\n",
+    "\"\"\"\n",
+    "rnd_search_cv = RandomizedSearchCV(keras_reg, param_distribs, n_iter=10, cv=3)\n",
+    "rnd_search_cv.fit(\n",
+    "    X_train, y_train, epochs=100, \n",
+    "    validation_data=(X_valid, y_valid),\n",
+    "    callbacks=[keras.callbacks.EarlyStopping(patience=10)]\n",
+    ")\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the best parameters and score\n",
+    "rnd_search_cv.best_params_, rnd_search_cv.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the best model\n",
+    "model = rnd_search_cv.best_estimator_.model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are more efficient ways to explore a search space than randomized search, usually by starting with a faster search with a wide range of parameters and then performing more thorough searches in good regions of the search space.\n",
+    "\n",
+    "Some examples:\n",
+    "\n",
+    "- [Hyperopt](https://github.com/hyperopt/hyperopt): a popular library for optimizing over complex search spaces including both real values (such as learning rate) and discrete values (such as number of layers)\n",
+    "- [Hyperas](https://github.com/maxpumperla/hyperas), [kopt](https://github.com/Avsecz/kopt), [Talos](https://github.com/autonomio/talos): useful libraries for optimmizing hyperparameters specifically for Keras models (Hyperas and kopt are based on Hyperopt)\n",
+    "- [Keras Tuner](https://www.youtube.com/watch?v=Un0JDL3i5Hg&t=24s): an optimization library created by Google for Keras models with a hosted service for visualization and analysis\n",
+    "- [Scikit-Optimize, or skopt](https://scikit-optimize.github.io/): a general-purpose optimization library\n",
+    "- [Spearmint](https://github.com/JasperSnock/spearmint): a Bayesian optimization library\n",
+    "- [Hyperband](https://github.com/zygmuntz/hyperband): a fast tuning library based on the [Hyperband paper](https://arxiv.org/abs/1603.06560) by Lisha Li et al.\n",
+    "- [Sklearn-Deap](https://github.com/rsteca/sklearn-deap): an optimization library based on evolutionary algorithms with an interface similar to GridSearchCV\n",
+    "\n",
+    "Tuning services also exist:\n",
+    "\n",
+    "- [Google Cloud AI Platform](https://cloud.google.com/ai-platform/training/docs/using-hyperparameter-tuning)\n",
+    "- [Arimo](https://arimo.com/)\n",
+    "- [SigOpt](https://sigopt.com/)\n",
+    "- [CallDesk's Oscar](http://oscar.calldesk.ai/)"
    ]
   },
   {
